--- a/style.css
+++ b/style.css
@@ -31,13 +31,17 @@ h3{
     justify-content: space-between;
 }
 
+ul{
+    padding-right: 35px;
+}
+
 li{
     display: inline-block;
-    height: 50px;
-    width: 50px;
+    height: 70px;
+    width: 70px;
     margin: 5px;
     border-radius: 50%;
-    border: 5px solid;
+    border: 6px solid;
     border-color: rgba(240, 123, 255);
     transition: all 0.3s ease-out;
     cursor: pointer;
